{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "3de93ef4-1eff-484e-a1f9-532b6f524c84",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "1927a94b-7f8d-49d2-9433-97925c85ea76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "e9ce53d2-e7fe-45ee-b673-dca25529c430",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "db2c5f7e-a576-4ad0-835e-7e7891b6e530",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22de67a9-3019-4490-96d4-6ca267713e5d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c69f6e46-4fcc-4cae-b5a4-096be4f31b18",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6d0f4cb-4538-4e93-9c4e-b559202cf638",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}